# UAS2

./: .gitignore  README.md
LSDP/: main.py  pyproject.toml
LSDP/CalibrationProject_data/: MarkerTracker.py  cam_calibration.py  dict_4x4_250_01.ods  plot.py  pos_from_aruco_marker_video.py  translation.csv  translation.ods  translation_after_rot.csv  translation_after_rot.ods
LSDP/Lecture1/: Makefile  pyproject.toml
LSDP/Lecture2/2026_LSDP_Camera_in_Space/: EP_opencv.txt  camera.xml
LSDP/Lecture2/exercises_solution_scripts/: epipolar_lines_known_EP_IP.py  epipolarlines_manual.py  point sampling.py  triangulation.py
LSDP/Lecture3/exercises_optimization/: pyproject.toml
LSDP/Lecture4/: 532_marker_locate.py  533_video_marker_locate.py  534_webcam_marker_locate.py  535_place_marker.py  536_video_marker_detect.py
LSDP/Lecture6/: 1ex.py  3ex.py  4ex.py
LSDP/Lecture6/input/: .gitignore
LSDP/Lecture6/solutions/: ex01_detect_and_draw_sift_features.py  ex02_detect_and_draw_sift_features_in_cover.py  ex03_match_images_with_akaze.py  ex03_match_images_with_sift.py  ex04_filter_matches_lowe_akaze.py  ex04_filter_matches_lowe_sift.py  ex05_filter_matches_homography_akaze.py  ex05_filter_matches_homography_sift.py  ex06_solve_system_of_equations.py  ex07_apply_similarity_transform.py  ex08_determine_similarity_transform.py  ex09_where_are_similarty_transforms_used.md  ex10_apply_perspective_transform.py  ex11_determine_perspective_transform.py  (+3 more)
LSDP/Lecture7/: ex01.py
LSDP/Lecture8/: 1091ex.py  1092ex.py
LSDP/PumpkinProject/: count.py  count_orthomosiac.py  segmentation.py
LSDP/project-visual-odometry/: Datatypes.py  Frame.py  FrameGenerator.py  ImagePair.py  Makefile  Map.py  Observation.py  ThreeDimViewer.py  TrackedCamera.py  TrackedPoint.py  custom_types.py  estimated_camera_track.Rmd  frame_extractor.py  pyproject.toml  visual_slam.py
(+287 files in other folders)
