[project]
name = "exercises"
version = "1.0.0"
description = "Exercises for the Large Scale Drone Perception course"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "codetiming>=1.3.0",
    "exifread>=3.0.0",
    "icecream>=2.0.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0",
    "plotly>=5.0.0",
    "pyopengl>=3.1.5",
    "pyqt6>=6.10.2",
    "python-fontconfig>=0.6.2.post1",
    "scikit-learn>=1.6.0",
]
